--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link
     rel="stylesheet"
-    href="/Frontend Mentor/NFT preview/style.css">
+    href="/style.css">
 
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
@@ -22,11 +22,11 @@
     <div class="container">
     <div class="container-image">
       <img
-        src="/Frontend Mentor/NFT preview/images/image-equilibrium.jpg"
+        src="./images/image-equilibrium.jpg"
         alt="Equilibrium image"
       />
       <div>
-        <img src="/Frontend Mentor/NFT preview/images/icon-view.svg">
+        <img src="./images/icon-view.svg">
       </div>  
     </div>
 
@@ -37,15 +37,15 @@
 
     <section class="info">
       <div class="info-para-1">
-        <p><img src="/Frontend Mentor/NFT preview/images/icon-ethereum.svg">0.041 ETH</p>
+        <p><img src="./images/icon-ethereum.svg">0.041 ETH</p>
       </div>
       <div class="info-para-2">
-        <p><img src="/Frontend Mentor/NFT preview/images/icon-clock.svg">3 days left</p>
+        <p><img src="./images/icon-clock.svg">3 days left</p>
       </div>
     </section>
 
     <footer>
-      <img src="/Frontend Mentor/NFT preview/images/image-avatar.png">
+      <img src="./images/image-avatar.png">
       <p><span>Creation of</span> Mayank Agarwal</p>
     </footer>
     </div>
